# Aether-OS-WebGPU-3D-OS

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.agents/skills/Aether-OS-WebGPU-3D-OS/: SKILL.md
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: deploy.yml
docs/: API.md  ARCHITECTURE.md  QUICKSTART.md
public/: CHANGELOG.html  CONTRIBUTING.html  INSTALL.html  LICENSE.html  SECURITY.html  demo.html  sw.js
public/docs/: API.html  ARCHITECTURE.html
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/agents/: AgentDelegation.ts
src/ai/: AdvancedAI.ts  FineTunedModels.ts
src/ai/multimodal/: MultiModalAI.ts
src/collaboration/: Collaboration.ts  CollaborationUI.ts
src/core/: EventBus.ts  Scene.ts
src/ecosystem/: Marketplace.ts  PlatformExpansion.ts
src/enterprise/: AdminDashboard.ts  MultiWorkspace.ts  SecurityManager.ts
src/intelligence/: AIIntegration.ts  AIOrchestrator.ts
src/memory/: MemoryGraph.ts
src/mobile/: NativeMobileApp.ts
src/performance/: PerformanceOptimizer.ts  SharedArrayBufferManager.ts  WASMModule.ts
src/performance/wasm/: Cargo.toml
src/performance/wasm/src/: lib.rs
src/plugins/: PluginSystem.ts
src/renderer/: WebGPURenderer.ts
src/shader/: ShaderPlayground.ts
src/storage/: PersistentStorage.ts
src/styles/: main.css  mobile.css
src/voice/: VoiceInput.ts
(+5 files in other folders)
