[package]
name = "aether-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Aether OS Team"]
description = "High-performance WASM modules for Aether OS"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Performance",
  "console_error_panic_hook"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SIMD and performance
getrandom = { version = "0.2", features = ["js"] }

# Math operations
num-traits = "0.2"
num-integer = "0.1"
rustfft = "6.1"

# For async operations
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Link-time optimization
panic = "abort"  # Smaller binary size
